[package]
name = "lumera-sdk-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust SDK for Lumera chain + Cascade/sn-api workflows"
repository = "https://github.com/LumeraProtocol/sdk-rs"

[lib]
name = "lumera_sdk_rs"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
bs58 = "0.5"
blake3 = "1"
zstd = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "multipart", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs"] }
tempfile = "3"
prost = "0.13"
cosmrs = { version = "0.22", features = ["rpc", "grpc"] }
cosmos-sdk-proto = "0.27"
tendermint-rpc = { version = "0.40", features = ["http-client"] }
k256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.10"
hex = "0.4"
bip39 = "2"
bip32 = "0.5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rq-library = { git = "https://github.com/LumeraProtocol/rq-library.git" }

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
